--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>PDF Example</h1>
-    <p>Open a PDF file <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">example</a>.</p>
+    <p>Open a PDF file <a href="https://github.com/philliphan3532/resume/raw/main/resume_2.pdf">example</a>.</p>
   </body>
 </html>
